--- a/pages/video-detail.html
+++ b/pages/video-detail.html
@@ -68,7 +68,7 @@
                     videoItem.className = `video-item ${video.orientation === 'vertical' ? 'vertical-video' : 'horizontal-video'}`;
                     videoItem.innerHTML = `
                         <div class="video-thumbnail">
-                            <video data-src="${video.path}" preload="none"></video>
+                            <video data-src="${video.path}" preload="metadata"></video>
                             <div class="play-button">
                                 <svg width="60" height="60" viewBox="0 0 60 60">
                                     <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
@@ -134,18 +134,15 @@
             const currentTimeDisplay = item.querySelector('.current-time');
             const durationDisplay = item.querySelector('.duration');
 
-            // 懒加载视频
+            // 初始化视频（加载第一帧作为封面）
+            if (video.dataset.src) {
+                video.src = video.dataset.src;
+            }
+
+            // 懒加载视频（已废弃，保留兼容性）
             function loadVideo() {
-                if (!video.src && video.dataset.src) {
-                    console.log('开始加载视频:', video.dataset.src);
-                    playButton.innerHTML = `
-                        <div style="color: white; text-align: center; padding: 20px; background: rgba(0,0,0,0.6); border-radius: 10px;">
-                            <p>加载中...</p>
-                        </div>
-                    `;
-                    video.src = video.dataset.src;
-                    video.load();
-                }
+                // 视频已经在初始化时加载，此函数不再需要
+                return;
             }
 
             // 视频加载错误处理
@@ -172,9 +169,6 @@
                 if (e.target.closest('.control-btn')) return;
 
                 if (video.paused) {
-                    // 先加载视频（如果还没加载）
-                    loadVideo();
-
                     // 暂停所有其他视频
                     document.querySelectorAll('video').forEach(v => {
                         if (v !== video) {
@@ -197,7 +191,6 @@
             pauseBtn.addEventListener('click', function(e) {
                 e.stopPropagation();
                 if (video.paused) {
-                    loadVideo();
                     video.play();
                 } else {
                     video.pause();
