--- a/pages/video-detail.html
+++ b/pages/video-detail.html
@@ -68,7 +68,7 @@
                     videoItem.className = `video-item ${video.orientation === 'vertical' ? 'vertical-video' : 'horizontal-video'}`;
                     videoItem.innerHTML = `
                         <div class="video-thumbnail">
-                            <video data-src="${video.path}" ${video.poster ? `poster="${video.poster}"` : ''} preload="metadata"></video>
+                            <video src="${video.path}" ${video.poster ? `poster="${video.poster}"` : ''} preload="none"></video>
                             <div class="play-button">
                                 <svg width="60" height="60" viewBox="0 0 60 60">
                                     <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
@@ -134,16 +134,7 @@
             const currentTimeDisplay = item.querySelector('.current-time');
             const durationDisplay = item.querySelector('.duration');
 
-            // 初始化视频（加载第一帧作为封面）
-            if (video.dataset.src) {
-                video.src = video.dataset.src;
-            }
-
-            // 懒加载视频（已废弃，保留兼容性）
-            function loadVideo() {
-                // 视频已经在初始化时加载，此函数不再需要
-                return;
-            }
+            // 视频已在HTML中设置src和poster，无需额外初始化
 
             // 视频加载错误处理
             video.addEventListener('error', function(e) {
@@ -151,7 +142,7 @@
                 playButton.innerHTML = `
                     <div style="color: white; text-align: center; padding: 20px; background: rgba(0,0,0,0.6); border-radius: 10px; max-width: 250px;">
                         <p>视频加载失败</p>
-                        <p style="font-size: 12px; margin-top: 8px;">文件: ${video.dataset.src}</p>
+                        <p style="font-size: 12px; margin-top: 8px;">文件: ${video.src}</p>
                         <p style="font-size: 12px; margin-top: 4px;">请检查文件是否存在</p>
                     </div>
                 `;
