--- a/pages/pdf-detail.html
+++ b/pages/pdf-detail.html
@@ -80,42 +80,26 @@
             }
         }
 
-        // PDF下载功能 - 通过fetch下载并触发保存
+        // PDF查看/下载功能
         async function downloadPDF(pdfPath, productCode) {
             if (!pdfPath) {
                 alert('PDF文件不存在');
                 return;
             }
 
-            try {
-                // 获取PDF文件
-                const response = await fetch(pdfPath);
-                if (!response.ok) {
-                    throw new Error('PDF文件加载失败');
-                }
+            // 将相对路径转换为OSS绝对路径，确保在所有浏览器中都能访问
+            // 如果换域名，只需修改下面这一行的 ossBaseUrl
+            const ossBaseUrl = 'https://company-product-test-hk.oss-cn-hongkong.aliyuncs.com';
 
-                const blob = await response.blob();
-                const url = window.URL.createObjectURL(blob);
+            // 如果已经是绝对路径（http开头），直接使用；否则转换为绝对路径
+            const absolutePath = pdfPath.startsWith('http')
+                ? pdfPath
+                : ossBaseUrl + '/' + pdfPath.replace('../', '');
 
-                // 创建临时下载链接
-                const a = document.createElement('a');
-                a.style.display = 'none';
-                a.href = url;
-                a.download = `${productCode}_产品说明书.pdf`;
-
-                document.body.appendChild(a);
-                a.click();
-
-                // 清理
-                setTimeout(() => {
-                    document.body.removeChild(a);
-                    window.URL.revokeObjectURL(url);
-                }, 100);
-            } catch (error) {
-                console.error('下载失败:', error);
-                // 如果下载失败，回退到直接打开
-                window.location.href = pdfPath;
-            }
+            // 直接打开PDF
+            // iOS微信：在微信内置预览器中打开
+            // Android微信：可能跳转到系统浏览器下载
+            window.location.href = absolutePath;
         }
 
         // 页面加载时执行
